--- a/SceneCompletionWidget.ui
+++ b/SceneCompletionWidget.ui
@@ -1,271 +1,201 @@
-<ui version="4.0" >
+<?xml version="1.0" encoding="UTF-8"?>
+<ui version="4.0">
  <class>SceneCompletionWidget</class>
- <widget class="QWidget" name="SceneCompletionWidget" >
-  <property name="geometry" >
+ <widget class="QWidget" name="SceneCompletionWidget">
+  <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>220</width>
+    <width>285</width>
     <height>510</height>
    </rect>
   </property>
-  <property name="minimumSize" >
+  <property name="minimumSize">
    <size>
     <width>220</width>
     <height>510</height>
    </size>
   </property>
-  <property name="windowTitle" >
+  <property name="windowTitle">
    <string>Form</string>
   </property>
-  <widget class="QGroupBox" name="_maskGroupBox" >
-   <property name="geometry" >
-    <rect>
-     <x>10</x>
-     <y>10</y>
-     <width>201</width>
-     <height>151</height>
-    </rect>
-   </property>
-   <property name="title" >
-    <string>1. Mark Area for removal</string>
-   </property>
-   <widget class="QRadioButton" name="_startMarkRadioButton" >
-    <property name="geometry" >
-     <rect>
-      <x>10</x>
-      <y>20</y>
-      <width>151</width>
-      <height>17</height>
-     </rect>
-    </property>
-    <property name="text" >
-     <string>Start Marking</string>
-    </property>
-   </widget>
-   <widget class="QRadioButton" name="_endMarkRadioButton" >
-    <property name="geometry" >
-     <rect>
-      <x>10</x>
-      <y>40</y>
-      <width>151</width>
-      <height>17</height>
-     </rect>
-    </property>
-    <property name="text" >
-     <string>End Marking</string>
-    </property>
-   </widget>
-   <widget class="QSlider" name="_brushSizeHSlider" >
-    <property name="geometry" >
-     <rect>
-      <x>10</x>
-      <y>80</y>
-      <width>181</width>
-      <height>21</height>
-     </rect>
-    </property>
-    <property name="minimumSize" >
-     <size>
-      <width>181</width>
-      <height>21</height>
-     </size>
-    </property>
-    <property name="minimum" >
-     <number>1</number>
-    </property>
-    <property name="maximum" >
-     <number>20</number>
-    </property>
-    <property name="orientation" >
-     <enum>Qt::Horizontal</enum>
-    </property>
-   </widget>
-   <widget class="QLabel" name="_brushSizeLabel" >
-    <property name="geometry" >
-     <rect>
-      <x>10</x>
-      <y>60</y>
-      <width>71</width>
-      <height>20</height>
-     </rect>
-    </property>
-    <property name="text" >
-     <string>Brush Size</string>
-    </property>
-   </widget>
-   <widget class="QWidget" name="horizontalLayoutWidget" >
-    <property name="geometry" >
-     <rect>
-      <x>10</x>
-      <y>120</y>
-      <width>181</width>
-      <height>25</height>
-     </rect>
-    </property>
-    <layout class="QHBoxLayout" name="_markGroupHLayout" >
-     <item>
-      <spacer name="_markGroupHSpacer" >
-       <property name="orientation" >
-        <enum>Qt::Horizontal</enum>
-       </property>
-       <property name="sizeHint" stdset="0" >
-        <size>
-         <width>40</width>
-         <height>20</height>
-        </size>
-       </property>
-      </spacer>
-     </item>
-     <item>
-      <widget class="QPushButton" name="_clearMaskButton" >
-       <property name="text" >
-        <string>Clear Mask</string>
-       </property>
-      </widget>
-     </item>
-    </layout>
-   </widget>
-  </widget>
-  <widget class="QGroupBox" name="_edgeGroupBox" >
-   <property name="geometry" >
-    <rect>
-     <x>10</x>
-     <y>170</y>
-     <width>201</width>
-     <height>71</height>
-    </rect>
-   </property>
-   <property name="title" >
-    <string>2. Edge Detection</string>
-   </property>
-   <widget class="QPushButton" name="_edgeDetecButton2" >
-    <property name="geometry" >
-     <rect>
-      <x>40</x>
-      <y>30</y>
-      <width>121</width>
-      <height>23</height>
-     </rect>
-    </property>
-    <property name="text" >
-     <string>Detection</string>
-    </property>
-   </widget>
-  </widget>
-  <widget class="QGroupBox" name="_structureGroupBox" >
-   <property name="geometry" >
-    <rect>
-     <x>10</x>
-     <y>250</y>
-     <width>201</width>
-     <height>111</height>
-    </rect>
-   </property>
-   <property name="title" >
-    <string>3.Structure Completion</string>
-   </property>
-   <widget class="QPushButton" name="_manualStructureCompletionButton" >
-    <property name="geometry" >
-     <rect>
-      <x>10</x>
-      <y>20</y>
-      <width>81</width>
-      <height>23</height>
-     </rect>
-    </property>
-    <property name="text" >
-     <string>Manual</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="_automaticStructureCompletionButton" >
-    <property name="geometry" >
-     <rect>
-      <x>110</x>
-      <y>20</y>
-      <width>81</width>
-      <height>23</height>
-     </rect>
-    </property>
-    <property name="text" >
-     <string>Automatic</string>
-    </property>
-   </widget>
-  </widget>
-  <widget class="QGroupBox" name="_textureGroupBox" >
-   <property name="geometry" >
-    <rect>
-     <x>10</x>
-     <y>370</y>
-     <width>201</width>
-     <height>131</height>
-    </rect>
-   </property>
-   <property name="title" >
-    <string>4.Texture Completion</string>
-   </property>
-   <widget class="QLabel" name="_patchSizeLabel" >
-    <property name="geometry" >
-     <rect>
-      <x>10</x>
-      <y>20</y>
-      <width>71</width>
-      <height>16</height>
-     </rect>
-    </property>
-    <property name="text" >
-     <string>Patch Size:</string>
-    </property>
-   </widget>
-   <widget class="QSpinBox" name="_patchSizeSpinBox" >
-    <property name="geometry" >
-     <rect>
-      <x>80</x>
-      <y>20</y>
-      <width>41</width>
-      <height>18</height>
-     </rect>
-    </property>
-    <property name="minimumSize" >
-     <size>
-      <width>41</width>
-      <height>0</height>
-     </size>
-    </property>
-    <property name="minimum" >
-     <number>8</number>
-    </property>
-    <property name="maximum" >
-     <number>21</number>
-    </property>
-   </widget>
-   <widget class="QLabel" name="_patchSizeLabel2" >
-    <property name="geometry" >
-     <rect>
-      <x>130</x>
-      <y>20</y>
-      <width>71</width>
-      <height>20</height>
-     </rect>
-    </property>
-    <property name="text" >
-     <string>pixels wide</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="_startTextureCompletionButton" >
-    <property name="geometry" >
-     <rect>
-      <x>10</x>
-      <y>50</y>
-      <width>75</width>
-      <height>23</height>
-     </rect>
-    </property>
-    <property name="text" >
-     <string>Start</string>
-    </property>
-   </widget>
-  </widget>
+  <layout class="QVBoxLayout" name="verticalLayout_2">
+   <item>
+    <widget class="QGroupBox" name="_maskGroupBox">
+     <property name="title">
+      <string>1. Mark Area for removal</string>
+     </property>
+     <layout class="QVBoxLayout" name="verticalLayout">
+      <item>
+       <widget class="QRadioButton" name="_startMarkRadioButton">
+        <property name="text">
+         <string>Start Marking</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QRadioButton" name="_endMarkRadioButton">
+        <property name="text">
+         <string>End Marking</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLabel" name="_brushSizeLabel">
+        <property name="text">
+         <string>Brush Size</string>
+        </property>
+        <property name="buddy">
+         <cstring>_brushSizeHSlider</cstring>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QSlider" name="_brushSizeHSlider">
+        <property name="minimumSize">
+         <size>
+          <width>181</width>
+          <height>21</height>
+         </size>
+        </property>
+        <property name="minimum">
+         <number>1</number>
+        </property>
+        <property name="maximum">
+         <number>20</number>
+        </property>
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <layout class="QHBoxLayout" name="_markGroupHLayout">
+        <item>
+         <spacer name="_markGroupHSpacer">
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>40</width>
+            <height>20</height>
+           </size>
+          </property>
+         </spacer>
+        </item>
+        <item>
+         <widget class="QPushButton" name="_clearMaskButton">
+          <property name="text">
+           <string>Clear Mask</string>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </item>
+     </layout>
+    </widget>
+   </item>
+   <item>
+    <widget class="QGroupBox" name="_edgeGroupBox">
+     <property name="title">
+      <string>2. Edge Detection</string>
+     </property>
+     <layout class="QVBoxLayout" name="verticalLayout_3">
+      <item>
+       <widget class="QPushButton" name="_edgeDetecButton2">
+        <property name="text">
+         <string>Detection</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </widget>
+   </item>
+   <item>
+    <widget class="QGroupBox" name="_structureGroupBox">
+     <property name="title">
+      <string>3.Structure Completion</string>
+     </property>
+     <layout class="QVBoxLayout" name="verticalLayout_4">
+      <item>
+       <layout class="QHBoxLayout" name="horizontalLayout">
+        <item>
+         <widget class="QPushButton" name="_manualStructureCompletionButton">
+          <property name="text">
+           <string>Manual</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QPushButton" name="_automaticStructureCompletionButton">
+          <property name="text">
+           <string>Automatic</string>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </item>
+     </layout>
+    </widget>
+   </item>
+   <item>
+    <widget class="QGroupBox" name="_textureGroupBox">
+     <property name="title">
+      <string>4.Texture Completion</string>
+     </property>
+     <layout class="QVBoxLayout" name="verticalLayout_5">
+      <item>
+       <layout class="QHBoxLayout" name="horizontalLayout_2">
+        <item>
+         <widget class="QLabel" name="_patchSizeLabel">
+          <property name="text">
+           <string>Patch Size:</string>
+          </property>
+          <property name="buddy">
+           <cstring>_patchSizeSpinBox</cstring>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QSpinBox" name="_patchSizeSpinBox">
+          <property name="minimumSize">
+           <size>
+            <width>41</width>
+            <height>0</height>
+           </size>
+          </property>
+          <property name="minimum">
+           <number>8</number>
+          </property>
+          <property name="maximum">
+           <number>21</number>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QLabel" name="_patchSizeLabel2">
+          <property name="text">
+           <string>pixels wide</string>
+          </property>
+          <property name="buddy">
+           <cstring>_patchSizeSpinBox</cstring>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </item>
+      <item>
+       <widget class="QPushButton" name="_startTextureCompletionButton">
+        <property name="text">
+         <string>Start</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </widget>
+   </item>
+  </layout>
  </widget>
  <resources/>
  <connections/>
