--- a/classification.ui
+++ b/classification.ui
@@ -7,232 +7,230 @@
     <x>0</x>
     <y>0</y>
     <width>761</width>
-    <height>497</height>
+    <height>343</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>属性分类</string>
   </property>
-  <widget class="QWidget" name="">
-   <property name="geometry">
-    <rect>
-     <x>51</x>
-     <y>101</y>
-     <width>681</width>
-     <height>214</height>
-    </rect>
-   </property>
-   <layout class="QHBoxLayout" name="horizontalLayout">
-    <item>
-     <layout class="QVBoxLayout" name="verticalLayout">
-      <item>
-       <widget class="QLabel" name="label">
-        <property name="text">
-         <string>属性分类</string>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QTableWidget" name="twLend">
-        <row>
-         <property name="text">
-          <string>1</string>
-         </property>
-        </row>
-        <row>
-         <property name="text">
-          <string>2</string>
-         </property>
-        </row>
-        <row>
-         <property name="text">
-          <string>3</string>
-         </property>
-        </row>
-        <row>
-         <property name="text">
-          <string>4</string>
-         </property>
-        </row>
-        <row>
-         <property name="text">
-          <string>5</string>
-         </property>
-        </row>
-        <row>
-         <property name="text">
-          <string>6</string>
-         </property>
-        </row>
-        <row>
-         <property name="text">
-          <string>7</string>
-         </property>
-        </row>
-        <row>
-         <property name="text">
-          <string>8</string>
-         </property>
-        </row>
-        <row>
-         <property name="text">
-          <string>9</string>
-         </property>
-        </row>
-        <row>
-         <property name="text">
-          <string>10</string>
-         </property>
-        </row>
-        <row>
-         <property name="text">
-          <string>11</string>
-         </property>
-        </row>
-        <row>
-         <property name="text">
-          <string>12</string>
-         </property>
-        </row>
-        <row>
-         <property name="text">
-          <string>13</string>
-         </property>
-        </row>
-        <row>
-         <property name="text">
-          <string>14</string>
-         </property>
-        </row>
-        <row>
-         <property name="text">
-          <string>15</string>
-         </property>
-        </row>
-        <row>
-         <property name="text">
-          <string>16</string>
-         </property>
-        </row>
-        <row>
-         <property name="text">
-          <string>17</string>
-         </property>
-        </row>
-        <row>
-         <property name="text">
-          <string>18</string>
-         </property>
-        </row>
-        <row>
-         <property name="text">
-          <string>19</string>
-         </property>
-        </row>
-        <row>
-         <property name="text">
-          <string>20</string>
-         </property>
-        </row>
-        <row>
-         <property name="text">
-          <string>21</string>
-         </property>
-        </row>
-        <row>
-         <property name="text">
-          <string>22</string>
-         </property>
-        </row>
-        <row>
-         <property name="text">
-          <string>23</string>
-         </property>
-        </row>
-        <row>
-         <property name="text">
-          <string>24</string>
-         </property>
-        </row>
-        <row>
-         <property name="text">
-          <string>25</string>
-         </property>
-        </row>
-        <column>
-         <property name="text">
-          <string>1</string>
-         </property>
-        </column>
-        <column>
-         <property name="text">
-          <string>2</string>
-         </property>
-        </column>
-        <column>
-         <property name="text">
-          <string>3</string>
-         </property>
-        </column>
-        <column>
-         <property name="text">
-          <string>4</string>
-         </property>
-        </column>
-        <column>
-         <property name="text">
-          <string>5</string>
-         </property>
-        </column>
-        <column>
-         <property name="text">
-          <string>6</string>
-         </property>
-        </column>
-        <column>
-         <property name="text">
-          <string>7</string>
-         </property>
-        </column>
-        <column>
-         <property name="text">
-          <string>8</string>
-         </property>
-        </column>
-        <column>
-         <property name="text">
-          <string>9</string>
-         </property>
-        </column>
-        <column>
-         <property name="text">
-          <string>10</string>
-         </property>
-        </column>
-       </widget>
-      </item>
-     </layout>
-    </item>
-    <item>
-     <layout class="QVBoxLayout" name="verticalLayout_2">
-      <item>
-       <widget class="QPushButton" name="updateButton">
-        <property name="text">
-         <string>更新属性分类</string>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QPushButton" name="saveButton">
-        <property name="text">
-         <string>保存属性分类</string>
-        </property>
-       </widget>
+  <layout class="QGridLayout" name="gridLayout_2">
+   <item row="0" column="0">
+    <widget class="QGroupBox" name="groupBox">
+     <property name="title">
+      <string>属性分类</string>
+     </property>
+     <layout class="QGridLayout" name="gridLayout">
+      <item row="0" column="0">
+       <layout class="QHBoxLayout" name="horizontalLayout">
+        <item>
+         <layout class="QVBoxLayout" name="verticalLayout">
+          <item>
+           <widget class="QTableWidget" name="twLend">
+            <row>
+             <property name="text">
+              <string>1</string>
+             </property>
+            </row>
+            <row>
+             <property name="text">
+              <string>2</string>
+             </property>
+            </row>
+            <row>
+             <property name="text">
+              <string>3</string>
+             </property>
+            </row>
+            <row>
+             <property name="text">
+              <string>4</string>
+             </property>
+            </row>
+            <row>
+             <property name="text">
+              <string>5</string>
+             </property>
+            </row>
+            <row>
+             <property name="text">
+              <string>6</string>
+             </property>
+            </row>
+            <row>
+             <property name="text">
+              <string>7</string>
+             </property>
+            </row>
+            <row>
+             <property name="text">
+              <string>8</string>
+             </property>
+            </row>
+            <row>
+             <property name="text">
+              <string>9</string>
+             </property>
+            </row>
+            <row>
+             <property name="text">
+              <string>10</string>
+             </property>
+            </row>
+            <row>
+             <property name="text">
+              <string>11</string>
+             </property>
+            </row>
+            <row>
+             <property name="text">
+              <string>12</string>
+             </property>
+            </row>
+            <row>
+             <property name="text">
+              <string>13</string>
+             </property>
+            </row>
+            <row>
+             <property name="text">
+              <string>14</string>
+             </property>
+            </row>
+            <row>
+             <property name="text">
+              <string>15</string>
+             </property>
+            </row>
+            <row>
+             <property name="text">
+              <string>16</string>
+             </property>
+            </row>
+            <row>
+             <property name="text">
+              <string>17</string>
+             </property>
+            </row>
+            <row>
+             <property name="text">
+              <string>18</string>
+             </property>
+            </row>
+            <row>
+             <property name="text">
+              <string>19</string>
+             </property>
+            </row>
+            <row>
+             <property name="text">
+              <string>20</string>
+             </property>
+            </row>
+            <row>
+             <property name="text">
+              <string>21</string>
+             </property>
+            </row>
+            <row>
+             <property name="text">
+              <string>22</string>
+             </property>
+            </row>
+            <row>
+             <property name="text">
+              <string>23</string>
+             </property>
+            </row>
+            <row>
+             <property name="text">
+              <string>24</string>
+             </property>
+            </row>
+            <row>
+             <property name="text">
+              <string>25</string>
+             </property>
+            </row>
+            <column>
+             <property name="text">
+              <string>1</string>
+             </property>
+            </column>
+            <column>
+             <property name="text">
+              <string>2</string>
+             </property>
+            </column>
+            <column>
+             <property name="text">
+              <string>3</string>
+             </property>
+            </column>
+            <column>
+             <property name="text">
+              <string>4</string>
+             </property>
+            </column>
+            <column>
+             <property name="text">
+              <string>5</string>
+             </property>
+            </column>
+            <column>
+             <property name="text">
+              <string>6</string>
+             </property>
+            </column>
+            <column>
+             <property name="text">
+              <string>7</string>
+             </property>
+            </column>
+            <column>
+             <property name="text">
+              <string>8</string>
+             </property>
+            </column>
+            <column>
+             <property name="text">
+              <string>9</string>
+             </property>
+            </column>
+            <column>
+             <property name="text">
+              <string>10</string>
+             </property>
+            </column>
+           </widget>
+          </item>
+         </layout>
+        </item>
+        <item>
+         <layout class="QVBoxLayout" name="verticalLayout_2">
+          <item>
+           <widget class="QPushButton" name="updateButton">
+            <property name="text">
+             <string>更新属性分类</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QPushButton" name="saveButton">
+            <property name="text">
+             <string>保存属性分类</string>
+            </property>
+           </widget>
+          </item>
+         </layout>
+        </item>
+       </layout>
       </item>
      </layout>
-    </item>
-   </layout>
-  </widget>
+    </widget>
+   </item>
+  </layout>
+  <zorder>label</zorder>
+  <zorder>groupBox</zorder>
  </widget>
  <resources/>
  <connections/>
